Fetch Hindi jokes from JokeAPI and display them

--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Private Joke Generator</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hindi Jokes</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Your CSS file here -->
 </head>
 <body>
-  <div class="container">
-    <h1>😂 Private Joke Generator</h1>
-    <p id="joke">Click the button to get a joke!</p>
-    <button id="jokeBtn">Tell Me a Joke</button>
-  </div>
-  <script src="script.js"></script>
+    <h1>आज का जोक!</h1>
+    <div id="jokeContainer">
+        <!-- Joke will appear here -->
+    </div>
+    <script src="script.js"></script> <!-- Your JS file here -->
 </body>
 </html>
