Initial commit with Hindi jokes website

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hindi Jokes</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Your CSS file here -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>आज का जोक!</h1>
     <div id="jokeContainer">
         <!-- Joke will appear here -->
     </div>
-    <script src="script.js"></script> <!-- Your JS file here -->
+    <button onclick="fetchHindiJoke()">Next Joke</button>
+    <script src="script.js"></script>
 </body>
 </html>
+
