Added API for Hindi jokes

--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hindi Jokes</title>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Devanagari&display=swap" rel="stylesheet">
+    <title>आज का जोक!</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>आज का जोक!</h1>
-    <div id="jokeContainer">
-        <!-- Joke will appear here -->
+    <div class="card">
+        <h1>🤣 आज का जोक!</h1>
+        <div id="jokeContainer">लोड हो रहा है...</div>
+        <button onclick="fetchHindiJoke()">👉 अगला जोक</button>
     </div>
-    <button onclick="fetchHindiJoke()">Next Joke</button>
     <script src="script.js"></script>
 </body>
 </html>
-
